tests/ecc-gcp-122-firewall_allow_all_without_target_tags/placebo-red/get-compute-v1-projects-cloud-custodian-global-firewalls_1.json
{
  "headers": {
    "etag": "5mOIcvczZfgSpgGujHH75sdiwBA=/o6ZqJ9WuF_FQYjgyEtluv2JdL7U=",
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Wed, 07 Dec 2022 12:54:12 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "6025",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls?alt=json"
  },
  "body": {
    "kind": "compute#firewallList",
    "id": "projects/cloud-custodian/global/firewalls",
    "items": [
      {
        "kind": "compute#firewall",
        "id": "6251182455617565349",
        "creationTimestamp": "2022-12-07T04:51:22.773-08:00",
        "name": "c7n-without-target-tags-122-red",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "0.0.0.0/0"
        ],
        "allowed": [
          {
            "IPProtocol": "all"
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/c7n-without-target-tags-122-red"
      }
    ],
    "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls"
  }
}
