tests/ecc-gcp-122-firewall_allow_all_without_target_tags/placebo-red/get-computeMetadata-v1-instance-service-accounts-test@test.com-token_1.json
{
  "headers": {
    "server": "BaseHTTP/0.6 Python/3.9.2",
    "date": "Wed, 07 Dec 2022 12:54:12 GMT",
    "content-type": "application/json",
    "metadata-flavor": "Google",
    "status": "200",
    "content-location": "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/test@test.com/token?scopes=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform"
  },
  "body": {
    "access_token": "#",
    "expires_in": 3339,
    "token_type": "Bearer"
  }
}
